--- a/Proyect_1/nbproject/project.properties
+++ b/Proyect_1/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyect_1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=C:\\Users\\LENOVO\\Desktop\\GDA\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=C:\\Users\\LENOVO\\Desktop\\GDA\\java-cup-11b.jar
+file.reference.jflex-full-1.7.0.jar=C:\\Users\\LENOVO\\Desktop\\GDA\\jflex-full-1.7.0.jar
+file.reference.Proyect_1-GDA=GDA
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Proyect_1-GDA}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.jflex-full-1.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
